test/visibility/only/innerModuleSharesName-topLevel.good
innerModuleSharesName-topLevel.chpl:10: error: Symbol 'whatev' undeclared in module 'M'
